--- a/ProyectoGAK/public/css/facturas.css
+++ b/ProyectoGAK/public/css/facturas.css
@@ -1,3 +1,17 @@
 ul{
     list-style-type: none;
 }
+
+
+body{
+    background: url(../Assets/Backgroud.jpg)no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+    width: 100%;
+}
+
+
+.titulo{
+    margin-left: 33vw;
+}
