--- a/ProyectoGAK/public/css/index.css
+++ b/ProyectoGAK/public/css/index.css
@@ -13,7 +13,7 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url(../assets/Backgroud.jpg)no-repeat;
+    background: url(../Assets/Backgroud.jpg)no-repeat;
     background-position: center;
     background-size: cover;
 }
