--- a/ProyectoGAK/public/css/facturas.css
+++ b/ProyectoGAK/public/css/facturas.css
@@ -15,3 +15,25 @@ body{
 .titulo{
     margin-left: 33vw;
 }
+
+#filtros{
+    background-color: rgb(184, 184, 184);
+    border: solid black 1px;
+    border-radius: 3px;
+    width: 15vw;
+    margin: 5vh 2vw 2vh 2vw;
+    padding: 1vh 1vw 35vh 1vw;
+}
+
+#resultados{
+    background-color: rgb(221, 221, 221);
+    border: solid black 1px;
+    border-radius: 3px;
+    width: 75vw;
+    margin: 5vh 2vw 2vh 2vw;
+    padding: 1vh 1vw 35vh 1vw;
+}
+
+#contenedor{
+    display: flex;
+}
